header icons align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,10 @@ body {
       }
 
       @media (max-width: 768px) {
+        #icon-logo {
+          width: 40px;
+          height: 40px;
+        }
         #nav-bar {
           display: none;
           flex-direction: column;
